# yang-tool-kit

./: .gitignore  CMakeLists.txt  README.md  configure
.github/workflows/: c-cpp.yml
app/: CMakeLists.txt
app/common/: yang_subs_mgr.h
app/src/: client_app.cpp  yang_subs_mgr.cpp
include/: utility.h  ytk_code_gen.h
recipe/: yang_input.txt  yang_module.txt  yang_upgrade.txt
src/: utility.cpp  ytk_code_gen.cpp  ytk_codec.cpp  ytk_generate.cpp  ytk_parser.cpp
xml/: network_device.xml
yang/: network-device.yang  router-config.yang
